apps/base/swing-thoughts/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: swing-thoughts
spec:
  type: ClusterIP
  selector:
    app: swing-thoughts
  ports:
    - port: 80
      targetPort: http
